--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.resources.static-locations=classpath:static/,file:static/
 #spring.resources.static-locations=classpath:static/,file:static/
 
 spring.http.multipart.max-file-size=10Mb
+spring.http.multipart.maxRequestSize=10Mb
