--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ logging.level.org.springframework.security=info
 
 #ÎÄ¼þ´æ´¢Â·¾¶
 prop.upload-folder=/docfile/
+prop.upload-dailyRoutine=/dailyRoutine/
 spring.resources.static-locations=classpath:static/,file:static/
 #spring.resources.static-locations=classpath:static/,file:static/
 
