--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.port=8081
 logging.level.org.springframework.security=info
 
 #ÎÄ¼þ´æ´¢Â·¾¶
-prop.upload-folder=/docfile/
+prop.upload-folder=../docfile/
 prop.upload-dailyRoutine=/dailyRoutine/
 spring.resources.static-locations=classpath:static/,file:static/
 #spring.resources.static-locations=classpath:static/,file:static/
