--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,20 @@ server.port=8081
 logging.level.org.springframework.security=info
 
 #文件存储路径
-prop.upload-folder=../docfile/
-prop.upload-dailyRoutine=/dailyRoutine/
+#prop.upload-folder=/docfile/
+#prop.upload-dailyRoutine=/dailyRoutine/
 spring.resources.static-locations=classpath:static/,file:static/
 #spring.resources.static-locations=classpath:static/,file:static/
+
+#静态资源对外暴露的访问路径
+#file.staticAccessPath=/upload/**
+
+ #文件上传目录（注意Linux和Windows上的目录结构不同）
+prop.upload-folder=/d://upload/docfile/
+prop.upload-dailyRoutine=/d://upload/dailyRoutine/
+
+#prop.upload-folder=/home/upload/docfile/
+#prop.upload-dailyRoutine=/home/upload/dailyRoutine/
 
 spring.http.multipart.max-file-size=10Mb
 spring.http.multipart.maxRequestSize=10Mb
