--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql:///tie?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://47.106.174.199/tie?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
 #MyBatis日志配置
@@ -15,7 +15,7 @@ logging.level.org.springframework.security=info
 #文件存储路径
 #prop.upload-folder=/docfile/
 #prop.upload-dailyRoutine=/dailyRoutine/
-spring.resources.static-locations=classpath:static/,file:static/
+#spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/static/,classpath:/static/,classpath:/public
 #spring.resources.static-locations=classpath:static/,file:static/
 
 #静态资源对外暴露的访问路径
